k8s/monitoring/reloader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloader
  namespace: batchsender
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reloader
  template:
    metadata:
      labels:
        app: reloader
    spec:
      serviceAccountName: reloader
      containers:
      - name: reloader
        image: stakater/reloader:v1.0.52
        args:
          - --reload-strategy=annotations
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
